[project]
name = "libxml2"
version = "0.0.0"
description = "A wrapper around the C libxml2 library to make it installable through pip/uv"
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "setuptools>=66.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
